# clay

./: .gitignore  CMakeLists.txt  README.md  clay.conf
.github/workflows/: cmake-linux-platform.yml  cmake-multi-platform.yml  cmake-single-platform.yml  cmake-windows-platform.yml
include/clay/: command.hpp  core.hpp  daemon.hpp  snapshot.hpp  storage.hpp  watcher.hpp
src/: command.cpp  core.cpp  daemon.cpp  main.cpp  snapshot.cpp  storage.cpp  watcher.cpp
